# back-to-cpp

./: .gitignore
ed/fx_converter/: CMakeLists.txt  Makefile
ed/fx_converter/include/: board_updater.hpp  currency.hpp  exchange_board.hpp  exchange_rate.hpp  globals.hpp  random_walk.hpp  shared_queue.hpp
ed/fx_converter/src/: board_updater.cpp  currency.cpp  exchange_board.cpp  exchange_rate.cpp  fx_converter.cpp  globals.cpp  random_walk.cpp  utils.cpp
ed/fx_converter/test/: test.cpp
mg/fx_converter/: CMakeLists.txt  Currency.hpp  ExchangeBoard.cpp  ExchangeBoard.hpp  ExchangeRate.hpp  Makefile  README.txt  RandomWalk.cpp  RandomWalk.hpp  UnitTest.cpp  Updater.cpp  Updater.hpp  main.cpp
mg/fx_converter/cmake-3.15.2/: CMakeCPackOptions.cmake  CPackConfig.cmake  CPackSourceConfig.cmake  CTestScript.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_uninstall.cmake
mg/fx_converter/include/: Currency.hpp  ExchangeBoard.hpp  ExchangeRate.hpp  RandomWalk.hpp  Updater.hpp
mg/fx_converter/src/: Currency.cpp  ExchangeBoard.cpp  ExchangeRate  ExchangeRate.cpp  RandomWalk.cpp  (+3 more)
sr/fx_converter/: CMakeLists.txt  Makefile  README.md  converter.cpp  exchangeBoard.cpp  exchangeTests.cpp  test
sr/fx_converter/header/: currencyList.hpp  exchangeRate.hpp
sr/fx_converter/include/: exchangeBoard.hpp  exchangeRate.hpp  priceUpdateQueue.hpp  randomPriceGen.hpp
sr/fx_converter/src/: converter.cpp  currencyList.cpp  exchangeBoard.cpp  exchangeRate.cpp  randomPriceGen.cpp  randomWalk.cpp
sr/fx_converter/test/: CMakeLists.txt  Makefile  exchangeTests  exchangeTests.cpp  test
sr/fx_converter/tests/: exchangeTests.cpp
(+145 files in other folders)
